--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=mHtfB6Clu1UAX_Oj3jb&oh=9ac86acd42bfa374786d48d461661477&oe=5E97E356" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=76DyuWBTo1QAX-yb3uO&oh=8eb68d68b27918e6ee55527b8443538d&oe=5E97E356" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -88,7 +88,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2236</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=j0pgLBvnPlcAX-UQX0y&oh=dae0a0c02c62783f7401be0e7080de1d&oe=5EA741AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=j0pgLBvnPlcAX8c9kVB&oh=8a7484585ef237695429c0d07d6e1c2f&oe=5EA741AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 							</div>
 							<div class="article-more__item-name">ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉</div>
 						</a>
@@ -97,63 +97,63 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1387</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=HRTowf6fHpEAX94HPh1&oh=813d286e2d1531cbb4d58251170a960f&oe=5E976960" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=HRTowf6fHpEAX-T2tjO&oh=294bb22351850ef72e95d9ef8861516d&oe=5E976960" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 							</div>
 							<div class="article-more__item-name">ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК</div>
 						</a>
 							<a href="./posts/./xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1370</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1372</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=fb-VOYcx90kAX-gVksG&oh=bf75e6e1b5b8c7f008b8e123a36704b9&oe=5E9A725D" alt="❤️">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=fb-VOYcx90kAX-a7nOE&oh=fa1d9ca48aed1bb2916b42bd4b4c57e6&oe=5E9A725D" alt="❤️">
 							</div>
 							<div class="article-more__item-name">❤️</div>
 						</a>
 							<a href="./posts/./gde-naytix-zashchitu-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1278</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1280</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=XMa_6AINsQ4AX9xSjcl&oh=ab11ed7d60e4bd30b2e43361d0c71e1a&oe=5E98B027" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=XMa_6AINsQ4AX_8n6BL&oh=bacd337326a02c9d5897caae880bf1e4&oe=5E98B027" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ</div>
+						</a>
+							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1128</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=QPqH1R58lTcAX8r7peb&oh=120d46525a40ccfa1221a9573e9aaa9c&oe=5E9A88FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+							</div>
+							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
 						</a>
 							<a href="./posts/./retsept-bezzhirovogo-sousa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1064</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1066</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=7asdA_2I7rwAX9984qY&oh=c628a0cf21b160be07c67d893c53d071&oe=5E968B22" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=7asdA_2I7rwAX9MFSdg&oh=d327df43a7fd43575bc5be94c0eb0280&oe=5E968B22" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 							</div>
 							<div class="article-more__item-name">РЕЦЕПТ БЕЗЖИРОВОГО СОУСА</div>
 						</a>
 							<a href="./posts/./malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1055</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1057</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=mmoc4S3YWxsAX9gId1j&oh=dee4573927a44ada1f2dc87497a34e0f&oe=5E9056AF" alt="Мало кто знает и догадывается, что нездоровая">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=mmoc4S3YWxsAX-ENdrg&oh=8416a9be6149f41f466f63298ee589fb&oe=5E9056AF" alt="Мало кто знает и догадывается, что нездоровая">
 							</div>
 							<div class="article-more__item-name">Мало кто знает и догадывается, что нездоровая</div>
 						</a>
-							<a href="./posts/./zernovyex-fasol-x-chechevitsa.html" class="article-more__item">
+							<a href="./posts/./dobavki-dlya-ukrepleniya-immunnoy.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1033</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>780</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=1NGrVQep7lYAX_amn3a&oh=a56120612cd737591aadb47c8118f07d&oe=5E9465A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=vMrPjFUpq-YAX8ldR8D&oh=653823d4ce13998c80294b55b201291d&oe=5E90D7D1" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
 							</div>
-							<div class="article-more__item-name">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
-						</a>
-							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1018</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=f1IvHLJW0ucAX-hYhlo&oh=5bb9eff1cec02df122d5c0a055e4d427&oe=5E9A88FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
-							</div>
-							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
+							<div class="article-more__item-name">ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ</div>
 						</a>
 						</div>
 				</div>
