--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=76DyuWBTo1QAX-yb3uO&oh=8eb68d68b27918e6ee55527b8443538d&oe=5E97E356" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=76DyuWBTo1QAX-yb3uO&oh=00427143b385e08a461a0a18f64d76ff&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xmpS9JspDhcAX8Ltlzl&oh=9b810671e5054cd36f1f5c6323269681&oe=5E908FD4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="melissa-xlemon-balm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rbsRf5W8R5wAX-Zjvzb&oh=795ce76920675ec12b91bc06791eb80b&oe=5E8FC529" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=8Y18Pn_tSzMAX9MkDCP&oh=90c3b62e15ef50e0fd021ef76e71b0d9&oe=5E9CF429" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dobavki-dlya-ukrepleniya-immunnoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=vMrPjFUpq-YAX8ldR8D&oh=653823d4ce13998c80294b55b201291d&oe=5E90D7D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=xeXaE8Qj2DsAX_cWoKO&oh=246bc4df72ec588a3683ed3b21af739b&oe=5E90D7D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gde-naytix-zashchitu-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=XMa_6AINsQ4AX_8n6BL&oh=bacd337326a02c9d5897caae880bf1e4&oe=5E98B027" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=XMa_6AINsQ4AX_8n6BL&oh=20c6472056a2b2e805012c229772ed64&oe=5EA5DF27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=HRTowf6fHpEAX-T2tjO&oh=294bb22351850ef72e95d9ef8861516d&oe=5E976960" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=UpBQm75ouL0AX9dpffG&oh=8f2f441b8d73cf1966aefece67322fb7&oe=5E976960" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxkurs-praktikum-xkrepkiy-immunitetxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=QhHprmoM0NkAX_6xpTd&oh=2c661fba7afbd43d5ad1fb6ff6d3fd2e&oe=5E980F23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=QhHprmoM0NkAX_6xpTd&oh=bf1e3f65fe5f002026b21993b68d559e&oe=5EA53E23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=fb-VOYcx90kAX-a7nOE&oh=fa1d9ca48aed1bb2916b42bd4b4c57e6&oe=5E9A725D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=bHxQMCgI2HAAX9tPWMz&oh=d7f8e9cdf48970c5e027062c2d468def&oe=5E9A725D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prakticheskie-shagi-dlya-vosstanovleniya-pechenixxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=iuhjt1j395cAX8Zq7f4&oh=cc2bbb1b670b406bf2de8ea77b7b0f77&oe=5EA63E39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=p6EqZpfjY5AAX-b9jDS&oh=cc3f2c78cb0e3bd5198370874aadcc3c&oe=5EA63E39" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="eto-navsegda-izmenit-vashu-zhizn-xxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=j0pgLBvnPlcAX8c9kVB&oh=8a7484585ef237695429c0d07d6e1c2f&oe=5EA741AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=nIxL7rcGCgoAX-aIsIO&oh=02a0ca548550ba5a5a82b8e3149dae5a&oe=5EA741AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=mmoc4S3YWxsAX-ENdrg&oh=8416a9be6149f41f466f63298ee589fb&oe=5E9056AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=3opGPhq6a00AX9eeEp6&oh=1cf58528329103c4b16d8652c058d1a5&oe=5E9056AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=1NGrVQep7lYAX_qoFjy&oh=2915ef194e1b99f13ab49c25112dc8dc&oe=5E9465A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=m-BGbwg231QAX_qSOCi&oh=55fd0bda5d6a6fb1358a1351a85aa0db&oe=5E9465A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=bMHNa-ZD68MAX8G6954&oh=b00d8c92414dc19d875f081c4e24192b&oe=5E90F240" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=NTJnpe5CGGcAX9qKRbP&oh=b7a1bb123299cc8f2a4c89bd1eab7138&oe=5E90F240" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Ob3NR5JVwsAX8i78Mr&oh=b57b408e50254fd224d13c84abdbbac2&oe=5E691BB6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Ob3NR5JVwsAX8i78Mr&oh=cd1a1137e49f32ad4e8013395e56b25c&oe=5E6A6D36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=b-y3TqPdinoAX97isBx&oh=2d495ac30bc64f5581550bd43bd537dc&oe=5E973742" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=DFhWBd5x4AIAX_lQ6cI&oh=3589924383c122aa55b63bd91d730d17&oe=5EA70E92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=B9dHVTkIqIQAX-bsh3p&oh=41cf8a7b2c1794c029b2ededf8b06991&oe=5E973742" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
